Fix for bug 833518 (New HTMLElement bindings caused ~20MB regression in peak memory consumption on areweslimyet). r=bz/njn, a=lsblakk.